Add annotated assembly test framework
- Create comprehensive test framework for validating analyzer output
- Add ability to write annotated assembly tests with expected live registers
- Implement manual register analysis to handle x86/x86_64 instructions
- Support NASM assembly and automatic ELF generation for tests
- Add test cases covering mov, conditional jumps, memory access patterns
- Fix register detection for memory operands in analyzer

The framework parses .asm files with annotations (LIVEIN, LIVEOUT, EXITS, MEMORY),
assembles them with NASM, extracts the code blocks, and verifies the analysis
matches expectations. This enables thorough testing of the analyzer module with
precisely controlled assembly code.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,10 @@ name = "fezinator"
 version = "0.1.0"
 edition = "2021"
 
+[[bin]]
+name = "fezinator"
+path = "src/main.rs"
+
 [dependencies]
 clap = { version = "4.5", features = ["derive"] }
 object = { version = "0.37", features = ["pe"] }
@@ -19,3 +23,4 @@ capstone = "0.12"
 
 [dev-dependencies]
 tempfile = "3.10"
+capstone = "0.12"
