--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,7 +59,7 @@ jobs:
     - name: Install system dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install -y libcapstone-dev
+        sudo apt-get install -y libcapstone-dev nasm
 
     - name: Install cargo-tarpaulin
       run: cargo install cargo-tarpaulin
