--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ log = "0.4"
 anyhow = "1.0"
 thiserror = "2.0"
 capstone = "0.12"
+uuid = { version = "1.0", features = ["v4"] }
+tempfile = "3.10"
 
 [dev-dependencies]
 tempfile = "3.10"
