--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ thiserror = "2.0"
 capstone = "0.13"
 uuid = { version = "1.0", features = ["v4"] }
 tempfile = "3.10"
+chrono = { version = "0.4", features = ["serde"] }
 
 [dev-dependencies]
 tempfile = "3.10"
