Optimize CI performance with Rust-specific caching
Replace manual GitHub Actions cache with Swatinem/rust-cache@v2 and
add cargo-binstall for faster tool installation. This significantly
reduces CI build times by:

- Using Rust-specific caching that keys by toolchain version and Cargo.lock
- Installing QA tools via cargo-binstall (downloads binaries instead of compiling from source)
- Caching compiled dependencies and cargo registry between runs
- Sharing caches between jobs with shared-key parameter

Expected improvements:
- First run: ~8-10 minutes (similar to current)
- Subsequent runs: ~2-3 minutes (vs 13+ minutes currently)
- No more recompiling dependencies on every CI run
- QA tools installation ~10x faster with cargo-binstall

Changes:
- .github/workflows/ci.yml: Replace actions/cache@v4 with Swatinem/rust-cache@v2
- .github/workflows/ci.yml: Add cargo-binstall installation to both jobs
- .github/workflows/ci.yml: Use cargo-binstall for cargo-tarpaulin
- scripts/qa.sh: Prefer cargo-binstall when available, fallback to cargo install

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,16 +28,14 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libcapstone-dev nasm
 
-    - name: Cache cargo registry
-      uses: actions/cache@v4
+    - name: Setup Rust cache
+      uses: Swatinem/rust-cache@v2
       with:
-        path: |
-          ~/.cargo/registry
-          ~/.cargo/git
-          target
-        key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-cargo-
+        shared-key: "qa"
+        cache-all-crates: true
+
+    - name: Install cargo-binstall
+      uses: cargo-bins/cargo-binstall@main
 
     - name: Make QA script executable
       run: chmod +x scripts/qa.sh
@@ -48,7 +46,7 @@ jobs:
   test-coverage:
     name: Test Coverage
     runs-on: ubuntu-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v5
@@ -61,8 +59,17 @@ jobs:
         sudo apt-get update
         sudo apt-get install -y libcapstone-dev nasm
 
+    - name: Setup Rust cache
+      uses: Swatinem/rust-cache@v2
+      with:
+        shared-key: "coverage"
+        cache-all-crates: true
+
+    - name: Install cargo-binstall
+      uses: cargo-bins/cargo-binstall@main
+
     - name: Install cargo-tarpaulin
-      run: cargo install cargo-tarpaulin
+      run: cargo binstall --no-confirm cargo-tarpaulin
 
     - name: Generate coverage report
       run: cargo tarpaulin --verbose --all-features --workspace --timeout 120 --out xml
