--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,9 +33,10 @@ jobs:
       with:
         shared-key: "qa"
         cache-all-crates: true
+        save-if: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Install cargo-binstall
-      uses: cargo-bins/cargo-binstall@main
+      uses: cargo-bins/cargo-binstall@v1.15.6
 
     - name: Make QA script executable
       run: chmod +x scripts/qa.sh
@@ -63,10 +64,10 @@ jobs:
       uses: Swatinem/rust-cache@v2
       with:
         shared-key: "coverage"
-        cache-all-crates: true
+        save-if: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Install cargo-binstall
-      uses: cargo-bins/cargo-binstall@main
+      uses: cargo-bins/cargo-binstall@v1.15.6
 
     - name: Install cargo-tarpaulin
       run: cargo binstall --no-confirm cargo-tarpaulin
