Fix test-coverage job: restore cache-all-crates
Issue: cargo-tarpaulin failed with "no such command: tarpaulin"
Root cause: Without cache-all-crates, rust-cache doesn't cache ~/.cargo/bin/
Result: cargo-binstall sees registry metadata saying it's installed, but binary is missing

Fix: Re-add cache-all-crates: true to test-coverage job to cache the tarpaulin binary

This ensures both metadata AND binary are cached/restored properly.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -64,6 +64,7 @@ jobs:
       uses: Swatinem/rust-cache@v2
       with:
         shared-key: "coverage"
+        cache-all-crates: true
         save-if: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Install cargo-binstall
