--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,6 +33,7 @@ jobs:
       with:
         shared-key: "qa"
         cache-all-crates: true
+        prefix-key: "v1"
         save-if: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Install cargo-binstall
@@ -65,6 +66,7 @@ jobs:
       with:
         shared-key: "coverage"
         cache-all-crates: true
+        prefix-key: "v1"
         save-if: ${{ github.ref == 'refs/heads/main' }}
 
     - name: Install cargo-binstall
