--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,6 +35,7 @@ jobs:
         cache-all-crates: true
         prefix-key: "v2"
         save-if: ${{ github.ref == 'refs/heads/main' }}
+        cache-bin: false
 
     - name: Install cargo-binstall
       uses: cargo-bins/cargo-binstall@v1.15.6
@@ -68,6 +69,7 @@ jobs:
         cache-all-crates: true
         prefix-key: "v2"
         save-if: ${{ github.ref == 'refs/heads/main' }}
+        cache-bin: false
 
     - name: Install cargo-binstall
       uses: cargo-bins/cargo-binstall@v1.15.6
